--- a/content/publication/JMP/cite.bib
+++ b/content/publication/JMP/cite.bib
@@ -1,8 +1,8 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
+@article{IndianaVOucher,
+  title = {Supply-Side Responses in School Choice},
+  author={Adger, Chandon and Felegi, Brianna},
+  journal = {Working Paper},
+  year    = 2024,
   volume  = 1,
   number  = 1
 }
