--- a/content/publication/testoptional/cite.bib
+++ b/content/publication/testoptional/cite.bib
@@ -1,8 +1,8 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
+@article{RemoveSATACT,
+  title = {The Impacts of Removing College Entrance Exams:Evidence from the Test-Optional Movement},
+  author={Felegi, Brianna},
+  journal = {Working Paper},
+  year    = 2024,
   volume  = 1,
   number  = 1
 }
