--- a/content/publication/washington/cite.bib
+++ b/content/publication/washington/cite.bib
@@ -1,5 +1,5 @@
-@article{RemoveSATACT,
-  title = {The Impacts of Removing College Entrance Exams:Evidence from the Test-Optional Movement},
+@article{washingtonAAP,
+  title = {Can Light-Touch Interventions Impact Education Outcomes?},
   author = {Felegi, Brianna},
   journal = {Working Paper},
   year    = 2024,
