--- a/content/publication/testoptional/cite.bib
+++ b/content/publication/testoptional/cite.bib
@@ -1,8 +1,6 @@
 @article{RemoveSATACT,
   title = {The Impacts of Removing College Entrance Exams:Evidence from the Test-Optional Movement},
   author = {Felegi, Brianna},
-  journal = {Working Paper},
-  year    = 2024,
-  volume  = 1,
-  number  = 1
+  journal={Available at SSRN 4494844},
+  year={2024}
 }
