--- a/content/publication/JMP/cite.bib
+++ b/content/publication/JMP/cite.bib
@@ -1,8 +1,6 @@
-@article{IndianaVOucher,
-  title = {Supply-Side Responses in School Choice},
+@article{IndianaVoucher,
+  title={Supply-Side Responses in School Choice},
   author={Adger, Chandon and Felegi, Brianna},
-  journal = {Working Paper},
-  year    = 2024,
-  volume  = 1,
-  number  = 1
+  journal={Available at SSRN 4603968},
+  year={2023}
 }
