--- a/content/publication/labormarkets287/cite.bib
+++ b/content/publication/labormarkets287/cite.bib
@@ -1,5 +1,5 @@
-@article{washingtonAAP,
-  title = {Can Light-Touch Interventions Impact Education Outcomes?},
+@article{Immigration287g,
+  title = {Labor Market Shocks and Immigration Enforcement},
   author = {Felegi, Brianna},
   journal = {Working Paper},
   year    = 2024,
