--- a/content/publication/labormarkets287/cite.bib
+++ b/content/publication/labormarkets287/cite.bib
@@ -1,6 +1,6 @@
 @article{Immigration287g,
   title = {Labor Market Shocks and Immigration Enforcement},
-  author = {Felegi, Brianna},
+  author = {Barrera, Sergio and Felegi, Brianna and Heron, Sarina}},
   journal = {Working Paper},
   year    = 2024,
   volume  = 1,
