--- a/content/publication/washington/cite.bib
+++ b/content/publication/washington/cite.bib
@@ -1,6 +1,6 @@
-@article{RemoveSATACT,
-  title = {The Impacts of Removing College Entrance Exams:Evidence from the Test-Optional Movement},
+@article{Washington,
+  title = {Can Light-Touch Interventions in High School Impact Education Outcomes?},
   author = {Felegi, Brianna},
-  journal={Available at SSRN 4494844},
+  journal={Available at SSRN 4994523},
   year={2024}
 }
