--- a/content/publication/testoptionalPP/cite.bib
+++ b/content/publication/testoptionalPP/cite.bib
@@ -1,6 +1,6 @@
-@article{Washington,
-  title = {Can Light-Touch Interventions in High School Impact Education Outcomes?},
+@article{Felegi2025-AEAPP,
+  title = {Examining Key Impacts of the Test-Optional Movement for Early-Adopters},
   author = {Felegi, Brianna},
-  journal={Available at SSRN 4994523},
-  year={2024}
+  journal={Working Paper},
+  year={2025}
 }
